@@ -5,16 +5,13 @@ import com.order.OrderSystem.domain.TestEntity;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @SpringBootTest
-class OrderSystemApplicationTests {
+class BaseOrderSystemApplicationTests {
 
 	@Autowired
 	OrderJpa orderRepository;
@@ -30,8 +27,7 @@ class OrderSystemApplicationTests {
 		Iterable<TestEntity> dataList = orderRepository.findAll();
 		//assert
 		List<TestEntity> list = StreamSupport
-				.stream(dataList.spliterator(), false)
-				.collect(Collectors.toList());
+				.stream(dataList.spliterator(), false).toList();
 		Assertions.assertEquals(1,list.size());
 		Assertions.assertEquals(2,list.get(0).getId());
 		Assertions.assertEquals("alan",list.get(0).getName());
